增加了柱状图和折线图页面

--- a/templates/Home_base.html
+++ b/templates/Home_base.html
@@ -2,6 +2,8 @@
 {% load  staticfiles %}
 <head>
     <meta charset="UTF-8">
+    <meta charset="utf-8"><link rel="icon" href="https://static.jianshukeji.com/highcharts/images/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
     .am-datepicker .am-datepicker-dow {
         height: 32px;
