--- a/templates/Home_files.html
+++ b/templates/Home_files.html
@@ -165,7 +165,7 @@
 
 
     $('.parserbutton').on('click', function(){
-        debugger;
+{#        debugger;#}
 {#        var id = $(this).parent("tr").attr("data-id");#}
         var id = $(this).data("id");
 {#        var id =  $("#table_info tr:eq(1) td:nth-child(3)").html("value");#}
