add a new highchart_h

--- a/templates/Home_qq_parser.html
+++ b/templates/Home_qq_parser.html
@@ -89,7 +89,7 @@
                 </div>
                  <div id="table_html"  class="'hour_">
                     <input type="hidden" name="type" value="" />
-                     <p align="center">一天周期教师访问频度统计</p>
+                     <p align="center"><a href="{% url 'qqhome:highchart_h' %}">日周期教师咨询趋势图</a></p>
                     <table id="table_info" class="am-table am-text-center">
                         <tbody>
                                 <tr>
